# python-app-ui-verification

./: README.md  pyproject.toml
tests/: test_myobservatory.py
